some more changes